--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
     background-color: #d9dcd6;
 }
 
-/*Header Style Start*/
+/*Header Section Start*/
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -41,7 +41,7 @@ header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
-/*Header Style End*/
+/*Header Section End*/
 
 a {
     color: #ffffff;
@@ -52,11 +52,7 @@ p {
     font-size: 16px;
 }
 
-section{
-    padding: 60px;
-}
-
-/*Hero Style Start*/
+/*Hero Section Start*/
 .hero {
     height: 800px;
     width: 100%;
@@ -66,8 +62,9 @@ section{
     background-position: center;
     position: relative;
 }
+/*Hero Section End*/
 
-/*Content Section*/
+/*Content Section Start*/
 .float-left {
     float: left;
     margin-right: 25px;
@@ -93,26 +90,23 @@ section{
     color: #ffffff; 
 }
 
-.content img{
+.content img {
     max-height: 200px;
 }
 
-.search-engine-optimization h2 {
+.content h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
+.content-info {
+    padding: 35px;
+    float: left;
+    width: 65%;
 }
+/*Content Section End*/
 
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-/*Benefits Section*/
+/*Benefit Section Start*/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -122,58 +116,23 @@ section{
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
-}
-
-.benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefits h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefits img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
+/*Benefit Section End*/
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-/*Hero Style End*/
-
-/*Footer Style Start*/
+/*Footer Section Start*/
 footer {
     padding: 30px;
     clear: both;
@@ -189,4 +148,4 @@ footer h2 {
 footer div{
     text-align: center;
 }
-/*Footer Style End*/
+/*Footer Section End*/
