--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
 
 /*Header Section Start*/
 header {
-    padding: 20px;
+    padding: 2%;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
@@ -26,8 +26,8 @@ header h1 .seo {
 }
 
 header nav {
-    padding-top: 15px;
-    margin-right: 20px;
+    padding-top: 1%;
+    margin-right: 2%;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
@@ -67,31 +67,34 @@ p {
 /*Content Section Start*/
 .float-left {
     float: left;
-    margin-right: 25px;
+    margin-right: 10%;
 }
 
 .float-right {
     float: right;
-    margin-left: 25px;
+    margin-left: 10%;
 }
 
-.content-section {
+.contents {
     width: 75%;
     display: inline-block;
-    margin-left: 20px;
+    margin-left: 2%;
 }
 
 .content{
-    margin-bottom: 20px;
-    padding: 50px;
+    margin: 2% 0;
+    width: 95%;
+    padding: 4%;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
-    color: #ffffff; 
+    color: #ffffff;
 }
 
 .content img {
-    max-height: 200px;
+    width: 35%;
+    overflow: auto;
+    float: left;
 }
 
 .content h2 {
@@ -100,10 +103,11 @@ p {
 }
 
 .content-info {
-    padding: 35px;
+    padding: 2%;
+    width: 55%;
     float: left;
-    width: 65%;
 }
+
 /*Content Section End*/
 
 /*Benefit Section Start*/
@@ -122,6 +126,7 @@ p {
 
 .benefits h3 {
     margin-bottom: 10px;
+    margin-top: 10%;
     text-align: center;
 }
 
