--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,15 +79,14 @@ header nav ul li {
 }
 
 .contents {
-    width: 75%;
+    width: 83%;
     display: inline-block;
-    margin: auto 2%;
-    padding: 2%
+    padding: 0 2%;
 }
 
 .content{
-    margin: 2% 0;
-    width: 95%;
+    margin-bottom: 2%;
+    width: 100%;
     padding: 4%;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -127,12 +126,17 @@ header nav ul li {
     background-color: #2589bd;
     margin-bottom: 2%;
     color: #ffffff;
+    display: block;
 }
 
 .benefits h3 {
     margin-bottom: 10px;
     margin-top: 10%;
     text-align: center;
+}
+
+.benefits p{
+    margin: auto;
 }
 
 .benefits img {
